# DownloadAnything

./: .gitignore  README.md  biome.json  build-backend.js  index.html  main.py  package.json  requirements.txt  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
dist-frontend/: index.html
dist-frontend/static/css/: components.css  style.css
dist-frontend/static/js/: api.js  state.js  ui.js
engine/: config.py  constants.py  cookies.py  downloader.py  manager.py  models.py  probing.py  title_extractor.py
extension/: background.js  constants.js  content.js  filename_extractor.js  manifest.json  streams.js
extension/background/: direct_media.js  offscreen.html  offscreen.js  service-worker.js  sniff_common.js  stream_extractor.js
extension/content/: direct_media.js  logger.js  messaging.js  modal.js  overlay.js  stream_extractor.js  styles.css
extension/lib/: constants.js  file_types.js  logger.js  ws-client.js
frontend/: index.html
server/app/: __init__.py  config.py  main.py
src/: App.css  App.tsx  components.css  index.css  main.tsx  style.css  types.ts  utils.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: ConfigurationView.tsx  ContextMenu.tsx  Dashboard.tsx  DownloadsView.tsx  FormatDrawer.tsx  Modal.tsx  Modals.tsx  SettingsPanel.tsx  Sidebar.tsx
src/hooks/: useDownloadEngine.ts  useDownloader.ts
src/lib/: logger.ts
src/utils/: format.ts  naming.ts
static/css/: components.css  style.css
static/js/: api.js  app.js
(+53 files in other folders)
