[package]
name = "app"
version = "0.4.0"
description = "DownloadAnything media downloader desktop shell"
authors = ["DownloadAnything Contributors"]
license = "MIT"
repository = "https://github.com/zaidzameer010/DownloadAnything"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tokio = "1.53.0"
libc = "0.2"
